kubernetes_application_development/04_probing/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: probe-app
  labels:
    app: probe-app
spec:
  containers:
    - name: probe-app
      image: quay.io/kubermatic-labs/kad-training:1.0.0-go
      imagePullPolicy: Always
      tty: true
      stdin: true
      ports:
        - name: http
          containerPort: 8080
      livenessProbe:
        initialDelaySeconds: 2
        periodSeconds: 2
        successThreshold: 1
        failureThreshold: 3
        httpGet:
          path: /liveness
          port: 8080
          httpHeaders:
          - name: Probe-Type
            value: Liveness
      readinessProbe:
        initialDelaySeconds: 2
        periodSeconds: 2
        successThreshold: 1
        failureThreshold: 3
        httpGet:
          path: /readiness
          port: 8080
          httpHeaders:
          - name: Probe-Type
            value: Readiness
