kubernetes_application_development/04_probing/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: probe-app
spec:
  selector:
    app: probe-app
  ports:
    - name: http
      port: 8080
      targetPort: http
  type: ClusterIP
