kubernetes_application_development/04_probing/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: probe-app
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /probe-app(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: probe-app
                port: 
                  number: 8080
